add: bozza visite per gruppi
